--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     coverage
     responses
 commands =
-    pytest --cov=taxii2client --cov-report term-missing
+    pytest --cov=taxii2client taxii2client/test/ --cov-report term-missing
 
 passenv = CI TRAVIS TRAVIS_*
 
@@ -20,10 +20,9 @@ deps =
   pycodestyle
 commands =
   pycodestyle ./taxii2client
-  flake8 --max-line-length=160
+  flake8
 
 [pycodestyle]
-ignore=
 max-line-length=160
 
 [flake8]
@@ -37,8 +36,8 @@ commands =
 
 [travis]
 python =
-  2.7: py27
-  3.3: py33
-  3.4: py34
-  3.5: py35
+  2.7: py27, pycodestyle
+  3.3: py33, pycodestyle
+  3.4: py34, pycodestyle
+  3.5: py35, pycodestyle
   3.6: py36, pycodestyle
