--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,7 +1,11 @@
 [settings]
-check=1
-diff=1
-known_third_party=pytest,requests,responses
+not_skip = __init__.py
+known_third_party=
+    pytest,
+    pytz,
+    requests,
+    responses,
+    six,
 known_first_party=taxii2client
 force_sort_within_sections=1
 multi_line_output=5
