--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ install:
   - pip install codecov
 script:
   - tox
-  - pre-commit run --all-files
+  # Recent versions of isort don't support Python 3.3
+  # The pre-commit hooks get run enough other places that it's OK to skip them
+  # here.
+  - if [[ $TRAVIS_PYTHON_VERSION != 3.3 ]]; then pre-commit run --all-files; fi
 after_success:
   - codecov
