Update Tox and Travis configuration
# Remove Python 3.3 from test harness
# Remove all 3.X-dev
# Remove the nightly build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,15 @@ language: python
 cache: pip
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
   - "3.5"
-  - "3.5-dev"
   - "3.6"
-  - "3.6-dev"
-  - "nightly"
-matrix:
-  allow_failures:
-    - python: "nightly"
 install:
   - pip install -U pip setuptools
   - pip install tox-travis pre-commit
   - pip install codecov
 script:
   - tox
-  # Recent versions of isort don't support Python 3.3
-  # The pre-commit hooks get run enough other places that it's OK to skip them
-  # here.
-  - if [[ $TRAVIS_PYTHON_VERSION != 3.3 ]]; then pre-commit run --all-files; fi
+  - pre-commit run --all-files
 after_success:
   - codecov
