--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,12 @@ passenv = CI TRAVIS TRAVIS_*
 [testenv:pycodestyle]
 deps =
   flake8
-  pycodestyle
+  # Flake8 doesn't work with latest pycodestyle
+  # See https://gitlab.com/pycqa/flake8/issues/406 and
+  #   https://github.com/PyCQA/pycodestyle/issues/741
+  pycodestyle<2.4.0
 commands =
+  pip check
   pycodestyle ./taxii2client
   flake8
 
