Update Bumpversion config

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,11 @@ current_version = 0.3.1
 commit = True
 tag = True
 
-[bumpversion:file:taxii2client/version.py]
+[bumpversion:file:docs/conf.py]
+
+[bumpversion:file:taxii2client/__init__.py]
+
+[bumpversion:file:setup.py]
 
 [bdist_wheel]
 universal = 1
