Removed pycodestyle version requirement from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,7 @@ passenv = CI TRAVIS TRAVIS_*
 [testenv:pycodestyle]
 deps =
   flake8
-  # Flake8 doesn't work with latest pycodestyle
-  # See https://gitlab.com/pycqa/flake8/issues/406 and
-  #   https://github.com/PyCQA/pycodestyle/issues/741
-  pycodestyle<2.4.0
+  pycodestyle
 commands =
   pip check
   pycodestyle ./taxii2client
