--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,7 @@ tag = True
 
 [bumpversion:file:docs/conf.py]
 
-[bumpversion:file:taxii2client/__init__.py]
-
-[bumpversion:file:setup.py]
+[bumpversion:file:taxii2client/version.py]
 
 [metadata]
 license_file = LICENSE
