pre-commit and isort changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ tag = True
 
 [bumpversion:file:taxii2client/version.py]
 
+[bumpversion:file:taxii2client/__init__.py]
+
 [metadata]
 license_file = LICENSE
 
