more tox changes

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
 commands =
   pip check
   pycodestyle ./taxii2client
-  flake8
+  flake8 ./taxii2client
 
 [pycodestyle]
 max-line-length=160
@@ -29,6 +29,7 @@ exclude=taxii2client/__init__.py
 
 [flake8]
 max-line-length=160
+exclude=taxii2client/__init__.py
 
 [testenv:isort-check]
 deps = isort
