Fix for isort v5.0.0

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ exclude=taxii2client/__init__.py
 [testenv:isort-check]
 deps = isort
 commands =
-    isort -rc taxii2client -df
-    isort -rc taxii2client -c
+    isort taxii2client --df
+    isort taxii2client -c
 
 [testenv:packaging]
 deps =
