update Tox/Travis project configuration

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ exclude=taxii2client/__init__.py
 [testenv:isort-check]
 deps = isort
 commands =
-    isort -rc taxii2client -df
-    isort -rc taxii2client -c
+    isort taxii2client --df
+    isort taxii2client -c
 
 [testenv:packaging]
 deps =
@@ -45,7 +45,7 @@ commands =
 
 [travis]
 python =
-  3.5: py35, pycodestyle
-  3.6: py36, pycodestyle, isort-check, packaging
-  3.7: py37, pycodestyle
-  3.8: py38, pycodestyle
+  3.5: py35
+  3.6: py36
+  3.7: py37
+  3.8: py38, pycodestyle, isort-check, packaging
