test harness additions
- update build badge on README.rst
- update to tox.ini
- update pre-commit-config.yaml

--- a/tox.ini
+++ b/tox.ini
@@ -1,51 +1,35 @@
 [tox]
-envlist = py35,py36,py37,py38,pycodestyle,isort-check,packaging
+envlist = py35,py36,py37,py38,packaging,pre-commit-check
 
 [testenv]
 deps =
-    -U
-    tox
-    pytest
-    pytest-cov
-    coverage
-    responses
+  -U
+  tox
+  pytest
+  pytest-cov
+  coverage
+  responses
 commands =
-    pytest --cov=taxii2client taxii2client/test/ --cov-report term-missing
+  pytest --cov=taxii2client taxii2client/test/ --cov-report term-missing
 
-passenv = CI TRAVIS TRAVIS_*
-
-[testenv:pycodestyle]
-deps =
-  flake8
-  pycodestyle
-commands =
-  pip check
-  pycodestyle ./taxii2client
-  flake8 ./taxii2client
-
-[pycodestyle]
-max-line-length=160
-exclude=taxii2client/__init__.py
-
-[flake8]
-max-line-length=160
-exclude=taxii2client/__init__.py
-
-[testenv:isort-check]
-deps = isort
-commands =
-    isort taxii2client --df
-    isort taxii2client -c
+passenv = GITHUB_*
 
 [testenv:packaging]
 deps =
-    readme_renderer
+  twine
 commands =
-    python setup.py check -r -s
+  python setup.py sdist bdist_wheel --universal
+  twine check dist/*
 
-[travis]
+[testenv:pre-commit-check]
+deps =
+  pre-commit
+commands =
+  pre-commit run --all-files
+
+[gh-actions]
 python =
   3.5: py35
   3.6: py36
   3.7: py37
-  3.8: py38, pycodestyle, isort-check, packaging
+  3.8: py38, packaging, pre-commit-check
