--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,22 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: v0.9.2
+    rev: v3.4.0
     hooks:
     -   id: trailing-whitespace
+    -   id: check-merge-conflict
+-   repo: https://github.com/PyCQA/flake8
+    rev: 3.8.4
+    hooks:
     -   id: flake8
+        name: Check project styling
         args:
         - --max-line-length=160
-    -   id: check-merge-conflict
--   repo: https://github.com/FalconSocial/pre-commit-python-sorter
-    sha: b57843b0b874df1d16eb0bef00b868792cb245c2
+-   repo: https://github.com/PyCQA/isort
+    rev: 5.7.0
     hooks:
-    -   id: python-import-sorter
-        args:
-        - --diff
+    -   id: isort
+        name: Sort python imports (shows diff)
+        args: ["-c", "--diff"]
+    -   id: isort
+        name: Sort python imports (fixes files)
+
